# Cuda-Compute-OSS

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  benchmark.py  cco.config.json  manifest.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  labels.yml  setup_labels.sh
attention/: README.md  __init__.py  __main__.py  benchmark.py  data.py  hybrid.py  reference.py  spec.py
cco/: blob.py  dispatch_trap.py  gate.py  guard_kernel.py  isolate.py  seed.py  significance.py
dashboard/: data.json  results.json
docs/: attention-track-plan.md  gittensor-registration.md  memory_optimization.md  testing-strategy.md  whitepaper.md
eval/: README.md  __init__.py  cli.py  copycat_guard.py  evaluator.py  github_client.py  gpu_batch.py  label.py  ledger.jsonl  ledger.py  memory.py  metrics.py  pr_bot.py  result_bot.py  tracks.py
examples/: run_example.py
index/: index.html
kernel_configs/: SCHEMA.toml  __init__.py  swiglu_input_quant.toml
matmul/: README.md  __init__.py  backend.py  cli.py  config.py  gemm.py  runner.py  storage.py
orchestrator/: README.md  __init__.py  clients.py  demo.py  models.py  pipeline.py
strategy/: README.md  __init__.py  backend.py  cli.py  config.py  cpu_backend.py  runner.py  smoke.py  storage.py  subspace.py  transforms.py
tests/: test_adaptive_causal.py  test_adaptive_spectral_causal.py  test_attention_playground.py  test_attention_spec_integral_sizes.py  test_auto_tile_budget.py  test_cli_errors.py  test_compare_quiet.py  test_compress_budget.py  test_config.py  (+37 more)
(+41 files in other folders)
