[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cco"
version = "0.2.0"
description = "CCO (Cuda-Compute-OSS) -- an open arena for cheaper matrix multiplication."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7"]
gpu = ["torch>=2.1"]

[project.urls]
Homepage = "https://github.com/zeokin/Cuda-Compute-OSS"

[tool.setuptools]
packages = ["matmul", "strategy", "eval", "attention"]
